--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.1",
     "antd": "^5.15.2",
+    "antd-style": "^3.6.1",
     "next": "14.1.3",
+    "rc-virtual-list": "^3.11.4",
     "react": "^18",
     "react-dom": "^18",
     "redux-actions": "^3.0.0"
