--- a/backend/src/Template.Application/Template.Application.csproj
+++ b/backend/src/Template.Application/Template.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <VersionPrefix>1.0.0.0</VersionPrefix>
     <TargetFramework>net8.0</TargetFramework>
@@ -17,5 +17,8 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Template.Core\Template.Core.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\BookAppService\" />
   </ItemGroup>
 </Project>
