--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,14 @@
     "rc-virtual-list": "^3.11.4",
     "react": "^18",
     "react-dom": "^18",
-    "redux-actions": "^3.0.0"
+    "redux-actions": "^3.0.0",
+    "restful-react": "^15.9.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/redux-actions": "^2.6.5",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "typescript": "^5"
