--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
     "@ant-design/icons": "^5.3.1",
     "antd": "^5.15.2",
     "antd-style": "^3.6.1",
+    "axios": "^1.6.8",
     "next": "14.1.3",
     "rc-virtual-list": "^3.11.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-highlight-words": "^0.20.0",
     "redux-actions": "^3.0.0",
     "restful-react": "^15.9.4"
   },
