--- a/backend/src/Template.Web.Host/appsettings.json
+++ b/backend/src/Template.Web.Host/appsettings.json
@@ -1,11 +1,11 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=JAKE-BOX\\SQLEXPRESS; Database=LibraryDb; Trusted_Connection=True; TrustServerCertificate=True;"
+    "Default": "Server=JAKE-BOX\\SQLEXPRESS; Database=Library; Trusted_Connection=True; TrustServerCertificate=True;"
   },
   "App": {
     "ServerRootAddress": "https://localhost:44311/",
     "ClientRootAddress": "http://localhost:3000/",
-    "CorsOrigins": "http://localhost:3000,http://localhost:8080,http://localhost:8081,http://localhost:3000"
+    "CorsOrigins": "http://localhost:3000,http://localhost:8080,http://localhost:8081,http://localhost:3000,https://localhost:44311/"
   },
   "Authentication": {
     "JwtBearer": {
