--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.1",
+    "@types/lodash": "^4.17.0",
     "antd": "^5.15.2",
     "antd-style": "^3.6.1",
     "axios": "^1.6.8",
+    "lodash": "^4.17.21",
     "next": "14.1.3",
+    "rc-tween-one": "^3.0.6",
     "rc-virtual-list": "^3.11.4",
     "react": "^18",
     "react-dom": "^18",
