--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18",
     "react-highlight-words": "^0.20.0",
     "redux-actions": "^3.0.0",
-    "restful-react": "^15.9.4"
+    "restful-react": "^15.9.4",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/node": "^20",
