--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,7 +11,10 @@ on:
 
 jobs:
   build:
-
+    defaults:
+      run:
+        working-directory: Client
+        
     runs-on: ubuntu-latest
 
     strategy:
