--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     defaults:
       run:
-        working-directory: Client
+        working-directory: client
         
     runs-on: ubuntu-latest
 
