--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,3 +30,24 @@ jobs:
         node-version: 18
     - run: npm i --f
     - run: npm run build --if-present
+
+  build:
+    defaults:
+      run:
+        working-directory: client
+        
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x, 18.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
+    - run: npm i --f
+    - run: npm run lint --if-present
