--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,7 @@ jobs:
     - run: npm i --f
     - run: npm run build --if-present
 
-  build:
+  lint:
     defaults:
       run:
         working-directory: client
