--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-highlight-words": "^0.20.0",
+    "react-use": "^17.5.0",
     "redux-actions": "^3.0.0",
     "restful-react": "^15.9.4",
     "sharp": "^0.33.3"
