--- a/backend/src/Template.Web.Host/Template.Web.Host.csproj
+++ b/backend/src/Template.Web.Host/Template.Web.Host.csproj
@@ -45,4 +45,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="App_Data\Images\" />
+  </ItemGroup>
 </Project>
